packages/coffee.chealt.com/src/components/common/common.css
:root {
  --gap--s: 0.4rem;
  --gap: 1rem;
  --gap--l: 1.4rem;

  --color-background: white;
  --color-background--subtle: rgba(250, 250, 250, 0.4);
  --color-background--dark: #efb376;
  --color-background--alternative: #d4d4d4;
  --color-background--good: #7ecb7e;
  --color-border: black;
  --color-border--alternative: #c5c5c5;
  --color-text: #37352c;
  --color-text--primary: #37352c;
  --color-text--good: #1a1a1a;
  --color-primary: #f1e3cd;
  --color-secondary: rgb(212 177 165 / 30%);
  --color-shadow: #505050;
  --color-success: #008000;
  --color-error: #b72b2b;
  --color-danger: #b72b2b;
  --color-danger--text: #dd6262;
  --color-origin-country: var(--color-background);
  --color-origin-country--stroke: var(--color-background);

  --border-radius: 16px;
  --border-radius--s: 8px;

  --z-index--xs: 10;
  --z-index--s: 20;
  --z-index--m: 30;
  --z-index--l: 40;
  --z-index--xl: 50;

  --tile-height: 240px;

  --icon-size: 32px;
  --icon-size--s: 20px;

  --card-height: 260px;
  --max-main-image-width: 600px;
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-background: #37352c;
    --color-background--alternative: #25241e;
    --color-background--dark: #f1e3cd;
    --color-background--subtle: rgba(32, 32, 32, 0.4);
    --color-border: #e0e0e0;
    --color-border--alternative: #868686;
    --color-text: #f1e3cd;
    --color-primary: #f8b64d;
    --color-text--primary: #272727;
    --color-secondary: #4b4a41;
    --color-shadow: rgba(0, 0, 0, 0.5);
    --color-success: #00ff00;
    --color-error: #b72b2b;
    --color-danger: #b72b2b;
    --color-danger--text: #dd6262;
  }
}

html,
body {
  background-color: var(--color-background);
  color: var(--color-text);
  margin: 0;
  padding: 0;
  min-height: 100%;
  font-family: Arial, Helvetica, sans-serif;
}

body {
  padding-bottom: 100px; /* leave space for bottom controls */
}

main {
  max-width: 2048px;
  margin: 0 auto;
  padding: 0;
}

h1 {
  font-size: 1.5rem;
}

h2 {
  font-size: 1.2rem;
}

h3 {
  font-size: 1rem;
}

h1,
h2,
h3,
h4,
h5 {
  margin: var(--gap) 0;
  padding: 0 var(--gap);
  text-transform: capitalize;

  &:has(a.button),
  &:has(button) {
    display: flex;
    align-items: center;
    gap: var(--gap--s);

    & > * {
      flex-grow: 1;
    }

    a.button,
    button {
      flex-grow: 0;
      flex-shrink: 1;
      width: auto;
    }
  }

  &.title {
    font-size: 1.2rem;
    margin: 0;
    padding: var(--gap--s) var(--gap);
  }
}

section {
  margin: var(--gap--l) 0;
  padding: 0 var(--gap);

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    padding: 0;
  }

  &.not-padded {
    padding: 0;
  }
}

ul,
li {
  margin: 0;
  padding: 0;
}

li {
  list-style: none;
}

dl {
  display: flex;
  flex-direction: column;
  gap: var(--gap--s);
}

dt {
  font-weight: bold;
}

dd {
  text-transform: capitalize;
  margin: 0;
}

a {
  text-decoration: none;
  color: inherit;
}

button,
a {
  position: relative;
  border: 2px solid transparent;

  &:focus-visible {
    border-color: var(--color-primary) !important;
    outline: none;
  }
}

a[href].in-progress,
button.in-progress {
  &::after {
    content: ' ';
    position: absolute;
    inset: 0;
    background: center no-repeat url(./loader.svg) var(--color-background--subtle);
    display: block;
    opacity: 1;
    transition-property: display opacity;
    transition-duration: 0.4s;
    transition-timing-function: ease-in-out;
    transition-behavior: allow-discrete;
    transition-delay: 200ms;

    @starting-style {
      opacity: 0;
    }
  }

  &:not(button)::after {
    border-radius: var(--border-radius);
  }

  &.button::after {
    background-color: var(--color-background);
  }
}

svg {
  fill: var(--color-text);
}

sup {
  text-transform: uppercase;
  font-size: 0.8rem;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;

  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.emphasized {
  font-weight: bold;
  font-size: 1.5rem;
}

.hidden {
  display: none;
}

.list-container {
  position: relative;
}

.list {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  overflow-x: auto;
  overflow-y: hidden;
  scroll-behavior: smooth;
  scroll-snap-type: x mandatory;
  scrollbar-width: none;
  gap: var(--gap);
  container-name: list;
  container-type: scroll-state;

  &::after {
    opacity: 0;
    transform: translateX(100%);
    transition:
      opacity 1s ease-out,
      transform 0.4s ease-out;
    content: '';
    position: absolute;
    right: 0;
    top: 0;
    bottom: 0;
    width: 21px;
    background-image:
      radial-gradient(circle, var(--color-background) 2px, transparent 2.5px),
      radial-gradient(circle, var(--color-background) 3px, transparent 3.5px),
      radial-gradient(circle, var(--color-background) 4px, transparent 4.5px);
    background-size: 10px 13px;
    background-repeat: repeat-y;
    background-position:
      calc(100% - 8px) 0,
      calc(100% - 2px) 6px,
      calc(100% + 5px) 0;
    pointer-events: none;

    @container list scroll-state(scrollable: right) {
      opacity: 1;
      transform: translateX(0);
    }
  }

  .item {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: 0 0 auto;
    scroll-snap-align: start;
    scroll-snap-stop: always;
    width: 90%;
    max-width: 340px;
    box-sizing: border-box;
    overflow: hidden;

    > a {
      position: relative;
      border: none;
      width: 100%;
      display: flex;
      flex-direction: column;
      align-items: stretch;
      justify-content: stretch;
      box-sizing: border-box;
    }

    .image {
      display: flex;
      flex-direction: column;
      justify-content: center;
      height: var(--card-height);
      overflow: hidden;
      box-sizing: border-box;
      border-radius: var(--border-radius);
    }

    .image.large {
      height: 380px;
    }

    img {
      display: block;
      width: 100%;
      height: auto;
      border-radius: var(--border-radius);
    }

    .name {
      padding: var(--gap) 0;
      text-transform: capitalize;
      text-align: center;
      font-size: 1.2rem;
    }
  }
}

.card {
  padding: var(--gap);
  background-color: var(--color-background--dark);
  border-radius: var(--border-radius);
}

.empty {
  font-size: 2rem;
  display: flex;
  align-items: center;
  justify-content: center;
  height: var(--card-height);
}

.chip {
  display: inline-flex;
  align-items: center;
  gap: var(--gap--s);
  padding: var(--gap--s);
  border-radius: var(--border-radius--s);
  margin-bottom: var(--gap--s);
  margin-right: var(--gap--s);
  background-color: var(--color-text);
  color: var(--color-background);
  border: 1px solid transparent;

  svg {
    fill: var(--color-background);
    height: 18px;
  }

  &.bordered {
    border-color: var(--color-text);
    background-color: var(--color-background);
    color: var(--color-text);
  }
}

.tag {
  position: absolute;
  width: 100%;
  top: 24px;
  right: -50%;
  text-align: center;
  transform: rotate(45deg);
  background-color: var(--color-background--alternative);
  padding: var(--gap--s) 40px;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 0.8rem;

  &.primary {
    background-color: var(--color-primary);
    color: var(--color-text--primary);
  }

  &.good {
    background-color: var(--color-background--good);
    color: var(--color-text--good);
  }

  &.left {
    transform: rotate(-45deg);
    left: -50%;
    right: auto;
  }
}

@view-transition {
  navigation: auto;
}

